# copier-pdm

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  copier.yml  extensions.py  index.html  mkdocs.yml  reset-history.sh  ruff.toml  runtests.sh  sitemap.xml  update-deps.sh
.github/workflows/: ci.yml  release.yml
[[repository_name]].tmpl/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  coverage.ini  mkdocs.yml  pyproject.toml
[[repository_name]].tmpl/docs/css/: mkdocstrings.css
[[repository_name]].tmpl/docs/reference/: cli.md
[[repository_name]].tmpl/licenses/: Academic_Free_License_v3.0  BSD_2-Clause_Simplified_License  BSD_3-Clause_Clear_License  BSD_3-Clause_New_or_Revised_License  ISC_License  MIT_License  PostgreSQL_License  SIL_Open_Font_License_1.1  University_of_Illinois-NCSA_Open_Source_License  zlib_License
[[repository_name]].tmpl/scripts/: gen-credits-data.py  gen-readme-data.py
[[repository_name]].tmpl/scripts/templates/: CREDITS.md  README.md
[[repository_name]].tmpl/src/{{cookiecutter.python_package_import_name}}/: __init__.py  __main__.py  cli.py
[[repository_name]].tmpl/tests/: test_cli.py
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: generate.md  license.md  migrate.md  requirements.md  update.md  work.md
generate/: index.html
hooks/: post_gen_project.py
license/: index.html
migrate/: index.html
project/: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  Makefile  Makefile.jinja  README.md.jinja  [[_copier_conf.answers_file]].jinja  duties.py  duties.py.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  tasks.py
project/.github/: FUNDING.yml.jinja
project/config/: coverage.ini.jinja  pytest.ini  ruff.toml.jinja
project/docs/: contributing.md.jinja  credits.md  credits.md.jinja  gen_credits.py.jinja  (+2 more)
requirements/: index.html
search/: search_index.json
tests/: helpers.sh  test_filenames.sh  test_generate.sh  test_licenses.sh
update/: index.html
work/: index.html
(+45 files in other folders)
